tests/output/half_expression_2_compiled.expected

Error: Unexpected token 'In'.
 --> tests/half_expression_2.bonk:11:1
   | 
11 | in
   | ^^

